// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSelector render() can filter projects by project name 1`] = `
<ProjectSelector
  organization={
    Object {
      "access": Array [],
      "id": "org",
      "projects": Array [
        Object {
          "isMember": true,
          "name": "Test Project",
          "slug": "test-project",
          "team": Object {
            "isMember": true,
            "name": "Test Team",
            "projects": Array [
              Object {
                "name": "Test Project",
                "slug": "test-project",
              },
              Object {
                "name": "Another Project",
                "slug": "another-project",
              },
            ],
            "slug": "test-team",
          },
        },
        Object {
          "isMember": true,
          "name": "Another Project",
          "slug": "another-project",
          "team": Object {
            "isMember": true,
            "name": "Test Team",
            "projects": Array [
              Object {
                "name": "Test Project",
                "slug": "test-project",
              },
              Object {
                "name": "Another Project",
                "slug": "another-project",
              },
            ],
            "slug": "test-team",
          },
        },
      ],
      "slug": "org",
      "teams": Array [
        Object {
          "isMember": true,
          "name": "Test Team",
          "projects": Array [
            Object {
              "name": "Test Project",
              "slug": "test-project",
            },
            Object {
              "name": "Another Project",
              "slug": "another-project",
            },
          ],
          "slug": "test-team",
        },
      ],
    }
  }
  projectId=""
>
  <div
    className="project-select"
  >
    <h3>
      <span
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        Select a project
      </span>
      <DropdownLink
        alwaysRenderMenu={false}
        anchorRight={false}
        caret={true}
        disabled={false}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
        topLevelClasses="project-dropdown"
      >
        <DropdownMenu
          alwaysRenderMenu={false}
          isOpen={true}
          keepMenuOpen={false}
          onClose={[Function]}
          onOpen={[Function]}
        >
          <span
            className="dropdown project-dropdown open"
          >
            <a
              className="dropdown-actor dropdown-toggle hover"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="dropdown-actor-title"
              >
                <span />
                <i
                  className="icon-arrow-down"
                />
              </div>
            </a>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <li
                className="project-filter"
                key="_filter"
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  placeholder="Filter projects"
                  type="text"
                  value="another"
                />
              </li>
              <MenuItem
                className=""
                href="/org/another-project/"
                key="another-project"
                linkClassName=""
              >
                <li
                  className=""
                  href={null}
                  role="presentation"
                  title={null}
                >
                  <a
                    className=""
                    href="/org/another-project/"
                    onClick={[Function]}
                    tabIndex="-1"
                  >
                    <span>
                      <strong
                        className="highlight"
                      >
                        Another
                      </strong>
                       Project
                    </span>
                  </a>
                </li>
              </MenuItem>
            </ul>
          </span>
        </DropdownMenu>
      </DropdownLink>
    </h3>
  </div>
</ProjectSelector>
`;

exports[`ProjectSelector render() can filter projects by team name/project name 1`] = `
<ProjectSelector
  organization={
    Object {
      "access": Array [],
      "id": "org",
      "projects": Array [
        Object {
          "isMember": true,
          "name": "Test Project",
          "slug": "test-project",
          "team": Object {
            "isMember": true,
            "name": "Test Team",
            "projects": Array [
              Object {
                "name": "Test Project",
                "slug": "test-project",
              },
              Object {
                "name": "Another Project",
                "slug": "another-project",
              },
            ],
            "slug": "test-team",
          },
        },
        Object {
          "isMember": true,
          "name": "Another Project",
          "slug": "another-project",
          "team": Object {
            "isMember": true,
            "name": "Test Team",
            "projects": Array [
              Object {
                "name": "Test Project",
                "slug": "test-project",
              },
              Object {
                "name": "Another Project",
                "slug": "another-project",
              },
            ],
            "slug": "test-team",
          },
        },
      ],
      "slug": "org",
      "teams": Array [
        Object {
          "isMember": true,
          "name": "Test Team",
          "projects": Array [
            Object {
              "name": "Test Project",
              "slug": "test-project",
            },
            Object {
              "name": "Another Project",
              "slug": "another-project",
            },
          ],
          "slug": "test-team",
        },
      ],
    }
  }
  projectId=""
>
  <div
    className="project-select"
  >
    <h3>
      <span
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        Select a project
      </span>
      <DropdownLink
        alwaysRenderMenu={false}
        anchorRight={false}
        caret={true}
        disabled={false}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
        topLevelClasses="project-dropdown"
      >
        <DropdownMenu
          alwaysRenderMenu={false}
          isOpen={true}
          keepMenuOpen={false}
          onClose={[Function]}
          onOpen={[Function]}
        >
          <span
            className="dropdown project-dropdown open"
          >
            <a
              className="dropdown-actor dropdown-toggle hover"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="dropdown-actor-title"
              >
                <span />
                <i
                  className="icon-arrow-down"
                />
              </div>
            </a>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <li
                className="project-filter"
                key="_filter"
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  placeholder="Filter projects"
                  type="text"
                  value="TEST"
                />
              </li>
              <MenuItem
                className=""
                href="/org/another-project/"
                key="another-project"
                linkClassName=""
              >
                <li
                  className=""
                  href={null}
                  role="presentation"
                  title={null}
                >
                  <a
                    className=""
                    href="/org/another-project/"
                    onClick={[Function]}
                    tabIndex="-1"
                  >
                    Another Project
                  </a>
                </li>
              </MenuItem>
              <MenuItem
                className=""
                href="/org/test-project/"
                key="test-project"
                linkClassName=""
              >
                <li
                  className=""
                  href={null}
                  role="presentation"
                  title={null}
                >
                  <a
                    className=""
                    href="/org/test-project/"
                    onClick={[Function]}
                    tabIndex="-1"
                  >
                    <span>
                      <strong
                        className="highlight"
                      >
                        Test
                      </strong>
                       Project
                    </span>
                  </a>
                </li>
              </MenuItem>
            </ul>
          </span>
        </DropdownMenu>
      </DropdownLink>
    </h3>
  </div>
</ProjectSelector>
`;

exports[`ProjectSelector render() lists projects and has filter 1`] = `
<div
  className="project-select"
>
  <h3>
    <span
      onClick={[Function]}
      role="button"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      Select a project
    </span>
    <DropdownLink
      alwaysRenderMenu={false}
      anchorRight={false}
      caret={true}
      disabled={false}
      isOpen={false}
      onClose={[Function]}
      onOpen={[Function]}
      title=""
      topLevelClasses="project-dropdown"
    >
      <li
        className="project-filter"
        key="_filter"
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          placeholder="Filter projects"
          type="text"
          value=""
        />
      </li>
      <MenuItem
        className=""
        href="/org/another-project/"
        key="another-project"
        linkClassName=""
      >
        <span>
          Another Project
        </span>
      </MenuItem>
      <MenuItem
        className=""
        href="/org/test-project/"
        key="test-project"
        linkClassName=""
      >
        <span>
          Test Project
        </span>
      </MenuItem>
    </DropdownLink>
  </h3>
</div>
`;

exports[`ProjectSelector render() should show empty message and create project button, when no projects and has "project:write" access 1`] = `
<div
  className="project-select"
>
  <h3>
    <span
      onClick={[Function]}
      role="button"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      Select a project
    </span>
    <DropdownLink
      alwaysRenderMenu={false}
      anchorRight={false}
      caret={true}
      disabled={false}
      isOpen={false}
      onClose={[Function]}
      onOpen={[Function]}
      title=""
      topLevelClasses="project-dropdown is-empty"
    >
      <MenuItem
        className="empty-projects-item"
        key="empty-message"
        noAnchor={true}
      >
        <div
          className="empty-message"
        >
          You have no projects.
        </div>
      </MenuItem>
      <MenuItem
        divider={true}
        key="divider"
      />
      <MenuItem
        className="empty-projects-item"
        key="create-project"
        noAnchor={true}
      >
        <a
          className="btn btn-primary btn-block"
          href="/organizations/org-slug/projects/new/"
        >
          Create project
        </a>
      </MenuItem>
    </DropdownLink>
  </h3>
</div>
`;

exports[`ProjectSelector render() should show empty message with no projects button, when no projects, and has no "project:write" access 1`] = `
<div
  className="project-select"
>
  <h3>
    <span
      onClick={[Function]}
      role="button"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      Select a project
    </span>
    <DropdownLink
      alwaysRenderMenu={false}
      anchorRight={false}
      caret={true}
      disabled={false}
      isOpen={false}
      onClose={[Function]}
      onOpen={[Function]}
      title=""
      topLevelClasses="project-dropdown is-empty"
    >
      <MenuItem
        className="empty-projects-item"
        key="empty-message"
        noAnchor={true}
      >
        <div
          className="empty-message"
        >
          You have no projects.
        </div>
      </MenuItem>
    </DropdownLink>
  </h3>
</div>
`;

exports[`ProjectSelector render() shows empty filter message when filtering has no results 1`] = `
<ProjectSelector
  organization={
    Object {
      "access": Array [],
      "id": "org",
      "projects": Array [
        Object {
          "isMember": true,
          "name": "Test Project",
          "slug": "test-project",
          "team": Object {
            "isMember": true,
            "name": "Test Team",
            "projects": Array [
              Object {
                "name": "Test Project",
                "slug": "test-project",
              },
              Object {
                "name": "Another Project",
                "slug": "another-project",
              },
            ],
            "slug": "test-team",
          },
        },
        Object {
          "isMember": true,
          "name": "Another Project",
          "slug": "another-project",
          "team": Object {
            "isMember": true,
            "name": "Test Team",
            "projects": Array [
              Object {
                "name": "Test Project",
                "slug": "test-project",
              },
              Object {
                "name": "Another Project",
                "slug": "another-project",
              },
            ],
            "slug": "test-team",
          },
        },
      ],
      "slug": "org",
      "teams": Array [
        Object {
          "isMember": true,
          "name": "Test Team",
          "projects": Array [
            Object {
              "name": "Test Project",
              "slug": "test-project",
            },
            Object {
              "name": "Another Project",
              "slug": "another-project",
            },
          ],
          "slug": "test-team",
        },
      ],
    }
  }
  projectId=""
>
  <div
    className="project-select"
  >
    <h3>
      <span
        onClick={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        Select a project
      </span>
      <DropdownLink
        alwaysRenderMenu={false}
        anchorRight={false}
        caret={true}
        disabled={false}
        isOpen={true}
        onClose={[Function]}
        onOpen={[Function]}
        title=""
        topLevelClasses="project-dropdown is-empty"
      >
        <DropdownMenu
          alwaysRenderMenu={false}
          isOpen={true}
          keepMenuOpen={false}
          onClose={[Function]}
          onOpen={[Function]}
        >
          <span
            className="dropdown project-dropdown is-empty open"
          >
            <a
              className="dropdown-actor dropdown-toggle hover"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="dropdown-actor-title"
              >
                <span />
                <i
                  className="icon-arrow-down"
                />
              </div>
            </a>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <li
                className="project-filter"
                key="_filter"
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  placeholder="Filter projects"
                  type="text"
                  value="Foo"
                />
              </li>
              <MenuItem
                className="empty-projects-item"
                key="empty-message"
                noAnchor={true}
              >
                <li
                  className="empty-projects-item"
                  href={null}
                  role="presentation"
                  title={null}
                >
                  <div
                    className="empty-message"
                  >
                    No projects found
                  </div>
                </li>
              </MenuItem>
            </ul>
          </span>
        </DropdownMenu>
      </DropdownLink>
    </h3>
  </div>
</ProjectSelector>
`;
